--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "language": "en",
-  "server_ip": "192.168.1.1",
-  "server_port": 5001
+  "ip": "",
+  "port": 0,
+  "username": "",
+  "hash": null
 }
